--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/*<!DOCTYPE html>
 <html lang="nl-be" dir="ltr" prefix="og:http://ogp.me/ns#">
     <head>
         <meta charset="UTF-8">
@@ -86,4 +86,4 @@
 <script src="./scripts/posts.js"></script>
 <script src="./scripts/slider.js"></script>
 <script src="./scripts/students.js"></script>
-</html>
+</html>*/
